feat: Complete headless WooCommerce store - working product tabs, cart, auth, checkout

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,22 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# testing
+/coverage
+*.lcov
+
+# bundle analyzer
+.next/analyze/
+
+# lighthouse
+lighthouse-report.html
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+Thumbs.db
