--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,8 @@
 {
+  "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "cd apps/web && npm run build",
   "outputDirectory": "apps/web/.next",
-  "framework": "nextjs",
   "installCommand": "npm install",
-  "devCommand": "cd apps/web && npm run dev",
-  "functions": {
-    "apps/web/src/app/api/**/*.ts": {
-      "maxDuration": 30
-    }
-  },
   "headers": [
     {
       "source": "/api/(.*)",
