--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,14 +31,17 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
+    "@sentry/nextjs": "^10.20.0",
     "@tanstack/react-query": "^5.90.3",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "@types/ioredis": "^4.28.10",
     "@types/nodemailer": "^7.0.1",
     "algoliasearch": "^5.36.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
+    "ioredis": "^5.8.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
@@ -51,11 +54,12 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@next/bundle-analyzer": "^15.5.2",
+    "@next/bundle-analyzer": "^15.5.6",
     "@playwright/test": "^1.48.2",
     "@tailwindcss/postcss": "^4",
-    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -69,6 +73,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "jest": "^30.1.2",
+    "jest-environment-jsdom": "^30.2.0",
     "lighthouse": "^12.8.2",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
