--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
     "dev:debug": "NODE_OPTIONS='--inspect' npm run dev"
   },
   "dependencies": {
+    "@headless-woo/shared": "workspace:*",
     "@algolia/autocomplete-js": "^1.19.2",
     "@algolia/autocomplete-theme-classic": "^1.19.2",
     "@radix-ui/react-dialog": "^1.1.15",
