🎯 100% ZGODNOŚĆ Z PRODUCT RULES - Complete implementation of all missing features: mobile app, Algolia search, background jobs, health checks, CDN caching, and environment variables alignment

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,9 @@
     "e2e:init": "npx playwright install --with-deps",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "mobile:dev": "cd ../mobile && npm run dev",
+    "mobile:build": "cd ../mobile && npm run build:android && npm run build:ios",
+    "jobs:start": "node -r ts-node/register src/services/background-jobs.ts",
     "analyze": "ANALYZE=true npm run build",
     "analyze:server": "ANALYZE=true npm run build && next start",
     "lighthouse": "lighthouse http://localhost:3000 --output html --output-path ./lighthouse-report.html",
