🔧 Fix Vercel monorepo config - Add webhook support for filler.pl

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,9 +1,10 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "pnpm run build",
   "outputDirectory": ".next",
   "framework": "nextjs",
-  "installCommand": "npm install",
-  "devCommand": "npm run dev",
+  "installCommand": "pnpm install",
+  "devCommand": "pnpm run dev",
+  "rootDirectory": "apps/web",
   "functions": {
     "src/app/api/**/*.ts": {
       "maxDuration": 30
