🔐 Implement Admin Authentication System
🛡️ SECURITY FEATURES:
- Admin token authentication middleware
- Login page with secure token validation
- Logout functionality with cookie clearing
- Protected admin routes

📱 NEW COMPONENTS:
- /admin/login - Secure login page
- /api/admin/auth - Authentication endpoint
- AdminAuthMiddleware - Route protection
- LogoutButton - Session management

🔧 TECHNICAL IMPLEMENTATION:
- Token-based authentication (ADMIN_TOKEN env var)
- Cookie-based session management
- Automatic redirect to login for unauthorized access
- Secure password field with show/hide toggle

⚠️ NOTE: Middleware needs debugging - admin routes not redirecting properly

--- a/env.example
+++ b/env.example
@@ -99,3 +99,8 @@ ENABLE_LIGHTHOUSE_CI=true
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 CORS_ORIGIN=https://your-domain.com,https://preview.your-domain.com
+
+# ===========================================
+# Admin Panel Security
+# ===========================================
+ADMIN_TOKEN=admin-2024-secure-token
