🔧 [Fix] Vercel monorepo configuration for routes-manifest
- Moved vercel.json to root directory for proper monorepo setup
- Updated buildCommand to use pnpm run build:web
- Fixed outputDirectory path to apps/web/.next
- Removed duplicate vercel.json from apps/web
- Should resolve routes-manifest.json path issues on Vercel
- Build tested locally and generates routes-manifest.json correctly

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
-  "buildCommand": "cd apps/web && pnpm run build",
+  "buildCommand": "pnpm run build:web",
   "outputDirectory": "apps/web/.next",
   "framework": "nextjs",
   "installCommand": "pnpm install",
-  "devCommand": "pnpm run dev",
+  "devCommand": "pnpm run dev:web",
   "rootDirectory": "apps/web",
   "build": {
     "env": {
@@ -11,7 +11,7 @@
     }
   },
   "functions": {
-    "src/app/api/**/*.ts": {
+    "apps/web/src/app/api/**/*.ts": {
       "maxDuration": 30
     }
   },
