🔧 [Fix] Correct functions path in vercel.json
- Fixed functions pattern from apps/web/src/app/api/**/*.ts to src/app/api/**/*.ts
- Vercel looks for functions relative to rootDirectory (apps/web)
- Should resolve unmatched function pattern error

--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
     }
   },
   "functions": {
-    "apps/web/src/app/api/**/*.ts": {
+    "src/app/api/**/*.ts": {
       "maxDuration": 30
     }
   },
