🗑️ [Cleanup] - Remove Algolia completely from project
✅ REMOVED ALGOLIA:
- Deleted algolia-search.ts files from apps/web and packages/shared
- Removed Algolia dependencies from package.json
- Cleaned up imports and exports
- Updated env.example (removed ALGOLIA_* variables)
- Updated documentation (docs/claude.md)

🎯 BENEFITS:
- Cleaner codebase without unused dependencies
- Reduced bundle size
- Simplified search implementation
- Using our own optimized WooCommerce search instead

🔧 TECHNICAL:
- Removed @algolia/autocomplete-js
- Removed @algolia/autocomplete-theme-classic
- Removed algoliasearch package
- Updated pnpm dependencies
- Clean workspace without Algolia references

✨ RESULT:
- Project is now 100% free from Algolia
- Using our Expert Level 9.6/10 search system instead
- Cleaner, more maintainable codebase

--- a/env.example
+++ b/env.example
@@ -16,12 +16,8 @@ STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
 
 # ===========================================
-# Search & Analytics
+# Analytics
 # ===========================================
-ALGOLIA_APP_ID=your_algolia_app_id
-ALGOLIA_API_KEY=your_algolia_api_key
-ALGOLIA_SEARCH_KEY=your_algolia_search_key
-
 NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
 
 # ===========================================
