--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -51,6 +51,7 @@
     "lucide-react": "^0.542.0",
     "next": "15.5.6",
     "nodemailer": "^7.0.6",
+    "ogl": "^1.0.11",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-window": "^1.8.11",
