--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "pnpm run build:web",
-  "outputDirectory": "apps/web/.next",
+  "outputDirectory": "apps/web/out",
   "framework": "nextjs",
   "installCommand": "pnpm install",
   "devCommand": "pnpm run dev:web",
