--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -52,6 +52,7 @@
     "next": "15.5.6",
     "nodemailer": "^7.0.6",
     "ogl": "^1.0.11",
+    "puppeteer": "^24.26.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-window": "^1.8.11",
