--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
-  "buildCommand": "pnpm run build:web",
-  "outputDirectory": "apps/web/out",
+  "buildCommand": "cd apps/web && pnpm run build",
+  "outputDirectory": "apps/web/.next",
   "framework": "nextjs",
   "installCommand": "pnpm install",
-  "devCommand": "pnpm run dev:web",
+  "devCommand": "cd apps/web && pnpm run dev",
   "build": {
     "env": {
       "NEXT_TELEMETRY_DISABLED": "1"
