--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,12 @@
 {
   "buildCommand": "cd apps/web && pnpm run build",
   "outputDirectory": "apps/web/.next",
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "/api/:path*"
+    }
+  ],
   "framework": "nextjs",
   "installCommand": "pnpm install",
   "devCommand": "cd apps/web && pnpm run dev",
@@ -10,8 +16,8 @@
     }
   },
   "functions": {
-    "src/app/api/**/*.ts": {
-      "maxDuration": 30
+    "apps/web/src/app/api/**/*.ts": {
+      "maxDuration": 60
     }
   },
   "headers": [
