--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -57,6 +57,7 @@
     "react-dom": "18.3.1",
     "react-window": "^1.8.11",
     "tailwind-merge": "^3.3.1",
+    "use-debounce": "^10.0.6",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
