--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,7 +26,11 @@
     "lighthouse": "lighthouse http://localhost:3000 --output html --output-path ./lighthouse-report.html",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "dev:debug": "NODE_OPTIONS='--inspect' npm run dev"
+    "dev:debug": "NODE_OPTIONS='--inspect' npm run dev",
+    "performance:test": "node scripts/performance-test.js",
+    "performance:monitor": "npm run dev & sleep 5 && npm run performance:test",
+    "cls:test": "npm run performance:test | grep CLS",
+    "lcp:test": "npm run performance:test | grep LCP"
   },
   "dependencies": {
     "@headless-woo/shared": "workspace:*",
@@ -38,6 +42,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@sentry/nextjs": "^10.20.0",
+    "@sentry/node-core": "^10.22.0",
     "@tanstack/react-query": "^5.90.3",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@types/ioredis": "^4.28.10",
@@ -46,6 +51,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
+    "import-in-the-middle": "^2.0.0",
     "ioredis": "^5.8.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.542.0",
@@ -56,6 +62,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-window": "^1.8.11",
+    "require-in-the-middle": "^8.0.1",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.6",
     "zustand": "^5.0.8"
