--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -63,6 +63,7 @@
     "require-in-the-middle": "^8.0.1",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.6",
+    "zod": "^3.25.76",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
