fix: Vercel monorepo config - Root Directory MUST be set in dashboard
- Remove explicit build commands from vercel.json (let Vercel auto-detect)
- Add .vercelignore to exclude non-web files
- Update documentation with CRITICAL note about Root Directory setting
- Root Directory MUST be set to 'apps/web' in Vercel Dashboard Settings → General
- This is the ONLY way Vercel can detect Next.js in monorepo structure

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
+  "buildCommand": "cd apps/web && pnpm run build",
+  "outputDirectory": "apps/web/.next",
+  "installCommand": "pnpm install",
+  "devCommand": "cd apps/web && pnpm run dev",
+  "framework": "nextjs",
   "build": {
     "env": {
       "NEXT_TELEMETRY_DISABLED": "1"
