fix: Add Next.js to root package.json for Vercel detection
- Add next@15.5.6 as dependency in root package.json
- This allows Vercel to detect Next.js before buildCommand runs
- Restore cd-based buildCommand instead of pnpm filter
- This is a workaround for Vercel's framework detection in monorepo
- Next.js will still be hoisted by pnpm from apps/web/package.json

--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "dev:debug": "cd apps/web && npm run dev:debug",
     "install:all": "npm install && cd apps/web && npm install && cd ../mobile && npm install && cd ../../packages/shared && npm install"
   },
+  "dependencies": {
+    "next": "15.5.6"
+  },
   "pnpm": {
     "overrides": {
       "eslint-plugin-react-hooks": "^5.2.0",
