--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
-  "buildCommand": "pnpm --filter @headless-woo/web build",
+  "buildCommand": "cd apps/web && pnpm run build",
   "outputDirectory": "apps/web/.next",
   "framework": "nextjs",
   "installCommand": "pnpm install",
-  "devCommand": "pnpm --filter @headless-woo/web dev",
+  "devCommand": "cd apps/web && pnpm run dev",
   "build": {
     "env": {
       "NEXT_TELEMETRY_DISABLED": "1"
