fix: Improve workspace package resolution for @headless-woo/shared
- Update webpack alias to point to package directory instead of index.ts
- Add packages directory to webpack resolve.modules with priority
- Enable symlinks resolution in webpack config
- Add exports field to packages/shared/package.json for better module resolution
- Fixes build error: Module not found: Can't resolve '@headless-woo/shared'
- Next.js/Turbopack should now resolve workspace packages correctly

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -2,8 +2,19 @@
   "name": "@headless-woo/shared",
   "version": "0.1.0",
   "private": true,
-  "main": "index.ts",
-  "types": "index.ts",
+  "main": "./index.ts",
+  "module": "./index.ts",
+  "types": "./index.ts",
+  "exports": {
+    ".": {
+      "types": "./index.ts",
+      "default": "./index.ts"
+    },
+    "./*": {
+      "types": "./*.ts",
+      "default": "./*.ts"
+    }
+  },
   "dependencies": {
     "zustand": "^5.0.8"
   },
