docs: Clarify that WC_CONSUMER_KEY and WC_CONSUMER_SECRET are REQUIRED
- Remove comments from required server-side environment variables
- Add clear note that these MUST be set in Vercel as server-side env vars
- These are used only in API routes, not available on client-side
- Fixes confusion about whether these should be set in Vercel

--- a/vercel.env.example
+++ b/vercel.env.example
@@ -14,15 +14,17 @@ NEXT_PUBLIC_WC_URL=https://your-wordpress-site.com/wp-json/wc/v3
 NEXT_PUBLIC_GA4_ID=G-XXXXXXXXXX
 NEXT_PUBLIC_GTM_ID=GTM-XXXXXXX
 
-# 🔐 SECURITY (serwerowe - nie ustawiaj w Vercel publicznych!)
-# WC_CONSUMER_KEY=your_consumer_key
-# WC_CONSUMER_SECRET=your_consumer_secret
-# ADMIN_CACHE_TOKEN=your_token
-# CSRF_SECRET=your_csrf_secret
-# CSRF_FORCE_ENABLE=true        # opcjonalnie włącz CSRF na preview/staging
-# CSRF_FORCE_DISABLE=true       # opcjonalnie całkowicie wyłącz (np. awaryjnie) – nie używać na prod
-# WOOCOMMERCE_WEBHOOK_SECRET=your_webhook_secret
-# KING_CART_API_SECRET=your_shared_cart_secret
+# 🔐 SECURITY (serwerowe - OBAWIĄZKOWE w Vercel!)
+# Te zmienne MUSZĄ być ustawione w Vercel jako zmienne środowiskowe serwerowe (bez prefiksu NEXT_PUBLIC_)
+# Są używane tylko w API routes po stronie serwera, nie są dostępne po stronie klienta
+WC_CONSUMER_KEY=your_consumer_key
+WC_CONSUMER_SECRET=your_consumer_secret
+ADMIN_CACHE_TOKEN=your_token
+CSRF_SECRET=your_csrf_secret
+CSRF_FORCE_ENABLE=true        # opcjonalnie włącz CSRF na preview/staging
+CSRF_FORCE_DISABLE=true       # opcjonalnie całkowicie wyłącz (np. awaryjnie) – nie używać na prod
+WOOCOMMERCE_WEBHOOK_SECRET=your_webhook_secret
+KING_CART_API_SECRET=your_shared_cart_secret
 
 # 🤖 BOT PROTECTION
 # NEXT_PUBLIC_RECAPTCHA_SITE_KEY=your_recaptcha_site_key
